--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
