--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+__pycache__
+venv/
+.env
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
+frontend/.env
 
 # testing
-/coverage
+frontend/coverage
 
 # production
-/build
+frontend/build
 
 # misc
 .DS_Store
