--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = src/migrations
+script_location = backend/src/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -12,7 +12,7 @@ script_location = src/migrations
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
-prepend_sys_path = . src
+prepend_sys_path = . backend/src
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
@@ -36,10 +36,10 @@ prepend_sys_path = . src
 # sourceless = false
 
 # version location specification; This defaults
-# to src/migrations/versions.  When using multiple version
+# to backend/src/migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-# version_locations = %(here)s/bar:%(here)s/bat:src/migrations/versions
+# version_locations = %(here)s/bar:%(here)s/bat:backend/src/migrations/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
