--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,13 @@
-FROM node:22.20.0-alpine
+FROM node:22.20.0-alpine AS builder
 WORKDIR /app
 ENV PATH=/app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install
-COPY . ./
-CMD ["npm", "start"] 
+COPY . .
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
